@@ -4,6 +4,7 @@ Pint Changelog
 0.26 (unreleased)
 -----------------
 
+- `GenericPlainRegistry.parse_expression` now correctly returns a dimensionless Quantity when taking a float, int, or NaN (#2259)
 - Replace MIP with scipy in `Quantity.to_preferred` (#2264)
 
 
